# otlp-tracing

./: Cargo.toml  README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yml
src/: cli.rs  config.rs  main.rs
