[package]
name = "tracing-otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
file-rotate = "0.7"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
## OTLP
opentelemetry = { version = "0.21", features = ["metrics"] }
tracing-opentelemetry = { version = "0.22", features = ["metrics"] } 
# opentelemetry-jaeger = "0.20"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace", "metrics"] }
# opentelemetry-prometheus = { version = "0.15", optional = true }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "tonic", "trace"] }
opentelemetry-semantic-conventions = { version = "0.13" }
# prometheus-client = { version = "0.22" }
autometrics = { version = "1.0", features = ["prometheus-exporter", "opentelemetry-0_21", "otel-push-exporter-grpc", "otel-push-exporter-tokio"] }
uuid = { version = "1", features = ["v4"] }

thiserror = "1.0"
error-stack = "0.4"

clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "3.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread" ] }
axum = { version = "0.6", features = ["headers"] }
